2010-06-17  Alex Milowski  <alex@milowski.com>

Reviewed by Darin Adler.

        Fixed a compile error in the paint() methods by making them use the
        new visitedDependentColor() method.
        https://bugs.webkit.org/show_bug.cgi?id=40327

        * mathml/RenderMathMLRoot.cpp:
        (WebCore::RenderMathMLRoot::paint):
        (WebCore::RenderMathMLRoot::layout): Fixed a crash where every child
        was assumed to be a RenderMathMLBlock instance when that isn't the
        case.  Also, layout() needed to mark the index for layout before
        calling layout() on the index.
        * mathml/RenderMathMLSquareRoot.cpp:
        (WebCore::RenderMathMLSquareRoot::paint):


Canonical link: https://commits.webkit.org/52336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61326 268f45cc-cd09-0410-ab3c-d52691b4dbfc